# GetOptPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md
docs/: .gitignore  Makefile  api_quickref.rst  conf.py  files  index.rst  make.bat  setup.rst
docs/_build/doctrees/: api_quickref.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  intro.doctree  setup.doctree
docs/_build/html/: .buildinfo  api_quickref.html  examples.html  faq.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: examples.txt  faq.txt  intro.txt
include/: command_fwd.h  command_impl.h  command_intf.h  getopt++.h  misc.h  parser_fwd.h  parser_impl.h  parser_intf.h
src/: command.cpp  getopt++.cpp  getopt++.h  parser.cpp
test/: unit_doctest.cpp
tests/: Makefile  get_code_cov.sh  gopp_tests.cpp
